<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_string" />

    <TextView
        android:id="@+id/response_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location_text"
        android:layout_below="@+id/location_text"
        android:layout_marginTop="17dp"
        android:text="@string/response_string" />

    <Button
        android:id="@+id/view_loc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/response_text"
        android:layout_below="@+id/response_text"
        android:layout_marginTop="18dp"
        android:text="@string/view_loc_button_label" />

    <Button
        android:id="@+id/submit_id_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location_id"
        android:layout_below="@+id/location_id"
        android:text="@string/submit_loc_id_label" />

    <Button
        android:id="@+id/send_loc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_loc_button"
        android:layout_below="@+id/view_loc_button"
        android:layout_marginTop="53dp"
        android:text="@string/send_loc_button_label" />

    <EditText
        android:id="@+id/location_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/send_loc_button"
        android:layout_below="@+id/send_loc_button"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/phone_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/send_loc_button"
        android:layout_below="@+id/view_loc_button"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="phone" />

</RelativeLayout>